# sigrid-data-extractor

./: .gitignore  Análisis de Huaicos en Ancash, Perú.ipynb  README.md  pyproject.toml
sigrid-data-extractor/: extractor.py
sigrid_data_extractor/: extractor.py
