[tool.poetry]
name = "sigrid-data-extractor"
version = "0.1.0"
description = ""
authors = ["David Duran <dadch1404@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sigrid-data-extractor"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.scripts]
start = "sigrid-data-extractor.extractor:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
